--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "gh-pages -d build"
   },
   "devDependencies": {
+    "gh-pages": "^1.2.0",
     "husky": "^0.14.3",
     "prettier": "^1.13.4",
     "pretty-quick": "^1.6.0"
