--- a/now.json
+++ b/now.json
@@ -1,11 +1,4 @@
 {
-  "type": "static",
-  "static": {
-    "rewrites": [
-      {
-        "source": "**",
-        "destination": "/index.html"
-      }
-    ]
-  }
+  "version": 2,
+  "alias": "ottawa-react"
 }
