--- a/package.json
+++ b/package.json
@@ -3,23 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^16.4.0",
-    "react-dom": "^16.4.2",
-    "react-scripts": "1.1.4",
-    "styled-components": "^3.3.2"
+    "next": "^9.0.7",
+    "react": "^16.10.1",
+    "react-dom": "^16.10.1",
+    "styled-components": "^4.4.0"
   },
   "scripts": {
-    "precommit": "pretty-quick",
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject",
-    "deploy": "gh-pages -d build"
+    "dev": "next",
+    "build": "next build",
+    "start": "next start"
   },
   "devDependencies": {
-    "gh-pages": "^1.2.0",
-    "husky": "^0.14.3",
-    "prettier": "^1.13.4",
-    "pretty-quick": "^1.6.0"
+    "prettier": "^1.13.4"
   }
 }
