--- a/static/manifest.json
+++ b/static/manifest.json
@@ -8,7 +8,7 @@
       "type": "image/x-icon"
     }
   ],
-  "start_url": "./index.html",
+  "start_url": "/",
   "display": "standalone",
   "theme_color": "#61dafb",
   "background_color": "#ffffff"
